Add Python basics notebooks

--- a/basics/Tuples.ipynb
+++ b/basics/Tuples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "698d7fd2-6ca4-4919-97cc-cb49de34dbad",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "('apple', 'banana', 'cherry')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "caa43587-c6b0-4c45-8024-b050a8162a51",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "bbab53b6-af8e-41d9-8661-8ad8d5a8a2f7",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "43faafc2-00e3-4014-8e1e-221bae9f88f3",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "52a281f3-70f2-45bf-8e81-80d346202dd4",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "a57f574a-2151-455e-b163-3b36435505e9",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "('John', 25, 'New York')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "dcd46742-527a-4526-8848-a3e3e9804f4f",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrecord\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJohnny\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrecord\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJohnny\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "c7567441-0074-4ca6-82d2-5a419b81d1fb",
    "metadata": {},
    "outputs": [
@@ -229,6 +229,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e1084078-1bba-4bc4-9e30-cdd07b4e3d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "[25, 'New York']\n"
+     ]
+    }
+   ],
+   "source": [
+    "(name, *other_data) = record\n",
+    "print(name)\n",
+    "print(other_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a5315440-f72e-4c9c-9a25-64413f00842a",
    "metadata": {},
@@ -238,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "65e35999-18f2-434e-aacc-02b3900b5fc2",
    "metadata": {},
    "outputs": [
@@ -262,7 +283,153 @@
    "id": "a0ac8862-8aba-4d4a-9c14-04ce28407b2c",
    "metadata": {},
    "source": [
-    "## Like Lists..."
+    "## Share access functionalities with Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0c077779-0853-4ffa-9070-be3183ed6fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Johnny\n",
+      "True\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(record[0])\n",
+    "print('Johnny' in record)\n",
+    "print(len(record))\n",
+    "print(record.index(30))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbd947b-ec3f-495e-8c7d-66aa2b32b7f8",
+   "metadata": {},
+   "source": [
+    "## Force tuples to be mutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c43a8bef-c224-4d89-b21f-fcd098882e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mango', 1.4, [15, 20])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "product_info = ('mango', 1.4, [15, 20])\n",
+    "product_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "83dc7c0d-713a-438a-976c-7d8b424f8c81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mango', 1.4, [15, 20]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert tuple into a list\n",
+    "product_info = list(product_info)\n",
+    "product_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "13e59665-9912-4691-bb3e-9e146068ad14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mango', 1.8, [15, 20]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Modify values\n",
+    "product_info[1] = 1.8\n",
+    "product_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "466808af-d7a5-4cf4-bc60-7fa1d653ef22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mango', 1.8, [15, 20])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the list into a tuple\n",
+    "product_info = tuple(product_info)\n",
+    "product_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "33cc3bd8-1a1a-4576-80b9-97618ff755fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mango', 1.8, [15, 10])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alter mutable item\n",
+    "product_info[2][1] = 10\n",
+    "product_info"
    ]
   }
  ],
@@ -282,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
